--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="cache-control" content="max-age=0" />
         <meta http-equiv="cache-control" content="no-cache" />
-        <link rel="shortcut icon" href="">
+         <link rel="shortcut icon" type="image/x-icon" href="images/FInal-Dharti-logo.png" />
         <title>Dharti</title>
         <!-- links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Sriracha&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Sriracha&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -26,25 +27,28 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span>
+                    <div class="collapse navbar-collapse" id="navbarNav" >
+                        <ul class="navbar-nav"  style="align-items: center;">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home</span>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About the dharti</a>
+                                <a class="nav-link" href="aboutus.html">About the dharti</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false"> Shop </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="shop.html">Shop</a>
                                     <a class="dropdown-item" href="#">Another action</a>
                                     <a class="dropdown-item" href="#">Something else here</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">contact us</a>
+                                <a class="nav-link " href="contactus.html">contact us</a>
+                            </li>
+                             <li class="nav-item">
+                                <a class="nav-link " href="#"><img src="images/cart.svg" class="cart-img"></a>
                             </li>
                         </ul>
                     </div>
@@ -53,10 +57,10 @@
         </header>
         <main>
             <section>
-                <div class="banner">
+                <div class="banner top-fix">
                     <img src="images/Hero-banner.png">
                 </div>
-                <div class="daughter-sec common-padding">
+                <div class="daughter-sec common-padding " data-aos="fade-up"  data-aos-duration="2000">
                     <div class="header">
                         <h2>daughters of <br>the soil </h2>
                     </div>
@@ -64,19 +68,19 @@
             </section>
             <section>
                 <div class="dau row m-0">
-                    <div class="inner-dark col-md-3 m-0  c-box small-text orange-text">Lorem ipsum dolor sit amet, consectetur ad Lorem ipsum dolor sit amet</div>
-                    <div class="inner-orange col-md-3 m-0 c-box caps big-text dark-text caps">Our <br>motherland </div>
-                    <div class="inner-dark col-md-3 m-0 c-box orange-text big-text caps">our <br>mitti </div>
-                    <div class="inner-orange col-md-3 m-0 c-box big-text dark-text caps"> our <br>earth </div>
-                    <div class="inner-orange col-md-3 m-0 c-box dark-text big-text caps">our <br>ground </div>
-                    <div class="inner-dark col-md-3 m-0 c-box big-text orange-text caps">our <br>maa </div>
-                    <div class="inner-orange col-md-3 m-0 c-box dark-text big-text caps">our <br>dharti </div>
-                    <div class="inner-dark col-md-3 m-0 c-box orange-text small-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div class="inner-dark col-md-6 col-lg-3 m-0  c-box small-text orange-text" data-aos="fade-up"  data-aos-duration="2000">Lorem ipsum dolor sit amet, consectetur ad Lorem ipsum dolor sit amet</div>
+                    <div class="inner-orange col-md-6 col-lg-3 m-0 c-box caps big-text dark-text caps" data-aos="fade-up"  data-aos-duration="2000">Our <br>motherland </div>
+                    <div class="inner-dark col-md-6 col-lg-3 m-0 c-box orange-text big-text caps" data-aos="fade-up"  data-aos-duration="2000">our <br>mitti </div>
+                    <div class="inner-orange col-md-6 col-lg-3 m-0 c-box big-text dark-text caps" data-aos="fade-up"  data-aos-duration="2000"> our <br>earth </div>
+                    <div class="inner-orange col-md-6 col-lg-3 m-0 c-box dark-text big-text caps" data-aos="fade-up"  data-aos-duration="2000">our <br>ground </div>
+                    <div class="inner-dark col-md-6 col-lg-3 m-0 c-box big-text orange-text caps" data-aos="fade-up"  data-aos-duration="2000">our <br>maa </div>
+                    <div class="inner-orange col-md-6 col-lg-3 m-0 c-box dark-text big-text caps" data-aos="fade-up"  data-aos-duration="2000">our <br>dharti </div>
+                    <div class="inner-dark col-md-6 col-lg-3 m-0 c-box orange-text small-text" data-aos="fade-up"  data-aos-duration="2000">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                 </div>
             </section>
             <section>
                 <div class="row mt-4 ml-0 mr-0">
-                    <div class="col-md-4  p-0">
+                    <div class="col-md-6 col-lg-4  p-0" data-aos="flip-up"   data-aos-duration="2000">
                         <div class="xx">
                             <div class="core-box2">
                                 <div class="border-img2 cl">
@@ -94,13 +98,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 p-0">
+                    <div class="col-md-6  col-lg-4 p-0" data-aos="flip-down"   data-aos-duration="2000">
                         <div class="core-box1">
                             <div class="border-img">
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4  p-0">
+                    <div class="col-md-6 col-lg-4  p-0" data-aos="flip-up"   data-aos-duration="2000">
                         <div class="xx">
                             <div class="core-box2">
                                 <div class="border-img2 cl">
@@ -118,13 +122,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 p-0">
+                    <div class="col-md-6  col-lg-4 p-0" data-aos="flip-down"   data-aos-duration="2000">
                         <div class="core-box1">
                             <div class="border-img">
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4  p-0">
+                    <div class="col-md-6  col-lg-4  p-0" data-aos="flip-up"   data-aos-duration="2000">
                         <div class="xx">
                             <div class="core-box2">
                                 <div class="border-img2 cl">
@@ -142,7 +146,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 p-0">
+                    <div class="col-md-6 col-lg-4 p-0" data-aos="flip-down"   data-aos-duration="2000">
                         <div class="core-box1">
                             <div class="border-img">
                             </div>
@@ -153,10 +157,10 @@
             <section class="common-padding">
                 <div class="women-dharti">
                     <div class="d- container-fluid">
-                        <div class="header">
+                        <div class="header" data-aos="fade-up"  data-aos-duration="2000">
                             <h2>the women <br>of dharti</h2>
                         </div>
-                        <div class="para">
+                        <div class="para" data-aos="fade-up"  data-aos-duration="2000">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                 tempor incididunt ut lab um dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                 tempor incididunt ut lab ore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -164,7 +168,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="slider-sec">
+                    <div class="slider-sec" data-aos="fade-up"  data-aos-duration="2000">
                         <div class="slider">
                             <div class="slider__item">
                                     <span>meet shilpaben.</span>
@@ -305,11 +309,11 @@
             <section class="common-padding">
                 <div class="container ">
                     <div class="row m-0">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-up"  data-aos-duration="2000">
                             <img src="images/art1.png" class="img-fluid cs">
                         </div>
-                        <div class="col-md-6">
-                            <img src="images/art2.png" class="img-fluid cs">
+                        <div class="col-md-6" >
+                            <img src="images/art2.png" class="img-fluid cs" data-aos="fade-up"  data-aos-duration="2000">
                         </div>
                     </div>
                 </div>
@@ -324,9 +328,9 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in rep</p>
                             </div>
-                            <div class="product-list">
+                            <div class="product-list" data-aos="fade-up"  data-aos-duration="2000">
                                 <div class="row">
-                                    <div class="col-md-3">
+                                    <div class="col-lg-3 col-md-6 ">
                                         <div class="product-card">
                                             <img src="images/Masala_Chaasmasala.png" class="img-fluid product-image">
                                             <div class="product-des-sec">
@@ -336,7 +340,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-lg-3 col-md-6 ">
                                         <div class="product-card">
                                             <img src="images/Masala_Chaasmasala.png" class="img-fluid product-image">
                                             <div class="product-des-sec">
@@ -346,7 +350,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-lg-3 col-md-6 ">
                                         <div class="product-card">
                                             <img src="images/Masala_Chaasmasala.png" class="img-fluid product-image">
                                             <div class="product-des-sec">
@@ -356,7 +360,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-lg-3 col-md-6 ">
                                         <div class="product-card">
                                             <img src="images/Masala_Chaasmasala.png" class="img-fluid product-image">
                                             <div class="product-des-sec">
@@ -367,7 +371,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="" class="view">view more</a>
+                                <a href="shop.html" target="_blank" class="view">view more</a>
                             </div>
                         </div>
                 </div>
@@ -405,6 +409,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <script src="js/popper.min.js"></script>
             <script src="js/bootstrap.min.js"></script>
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
             <script type="text/javascript">
                 var $slider = $('.slider');
@@ -433,7 +438,7 @@
                 
                 $slider.slick();
                 } 
-                
+                  AOS.init();
             </script>
         </footer>
     </body>
